--- a/radio/src/translations/en.h.txt
+++ b/radio/src/translations/en.h.txt
@@ -476,7 +476,13 @@
   #define TR_CYC_VSRCRAW       "[C1]""[C2]""[C3]"
 #endif
 
-#define TR_VSRCRAW             "---\0""Rud\0""Ele\0""Thr\0""Ail\0" TR_POTS_VSRCRAW TR_ROTARY_ENCODERS "MAX\0" TR_CYC_VSRCRAW "TrmR" "TrmE" "TrmT" "TrmA" TR_SW_VSRCRAW
+#if defined(CPUARM)
+  #define TR_RESERVE_VSRCRAW   "[--]"
+  #define TR_EXTRA_VSRCRAW     "Batt""Time" TR_RESERVE_VSRCRAW TR_RESERVE_VSRCRAW TR_RESERVE_VSRCRAW TR_RESERVE_VSRCRAW TR_RESERVE_VSRCRAW "Tmr1""Tmr2""Tmr3"
+#else
+#endif
+
+#define TR_VSRCRAW             "---\0""Rud\0""Ele\0""Thr\0""Ail\0" TR_POTS_VSRCRAW TR_ROTARY_ENCODERS "MAX\0" TR_CYC_VSRCRAW "TrmR" "TrmE" "TrmT" "TrmA" TR_SW_VSRCRAW TR_EXTRA_VSRCRAW
 
 #define LEN_VTMRMODES          "\003"
 #define TR_VTMRMODES           "OFF""ON\0""THs""TH%""THt"
@@ -801,6 +807,7 @@
 #define TR_EXTERNALRF          "External RF"
 #define TR_FAILSAFE            TR(INDENT "Failsafe", INDENT "Failsafe mode")
 #define TR_FAILSAFESET         "FAILSAFE SETTINGS"
+#define TR_MENUSENSOR          "SENSOR"
 #define TR_COUNTRYCODE         "Country Code"
 #define TR_VOICELANG           "Voice Language"
 #define TR_UNITSSYSTEM         "Units"
@@ -833,6 +840,8 @@
 #define TR_MODELIDUSED         TR("ID already used","Model ID already used")
 #define TR_MODULE              INDENT "Module"
 #define TR_TELEMETRY_TYPE      TR("Type", "Telemetry Type")
+#define TR_TELEMETRY_SENSORS   "Sensors"
+#define TR_TELEMETRY_NEWSENSOR INDENT "Add a new sensor..."
 #define TR_CHANNELRANGE        TR(INDENT "Ch. Range", INDENT "Channel Range")
 #define TR_LOWALARM            INDENT "Low Alarm"
 #define TR_CRITICALALARM       INDENT "Critical Alarm"
@@ -962,3 +971,20 @@
 #define TR_VIEW_NOTES          "View Notes"
 #define TR_MODS_FORBIDDEN      "Modifications forbidden!"
 #define TR_UNLOCKED            "Unlocked"
+#define TR_ID                  "ID"
+#define TR_PRECISION           "Precision"
+
+#define ZSTR_RSSI              "RSSI"
+#define ZSTR_ALT               "ALT"
+#define ZSTR_TEMP              "TEMP"
+#define ZSTR_RPM               "RPM"
+#define ZSTR_FUEL              "FUEL"
+#define ZSTR_VSPD              "VSPD"
+#define ZSTR_ACCX              "ACCX"
+#define ZSTR_ACCY              "ACCY"
+#define ZSTR_ACCZ              "ACCZ"
+#define ZSTR_CURR              "CURR"
+#define ZSTR_VFAS              "VFAS"
+#define ZSTR_ASPD              "ASPD"
+#define ZSTR_GSPD              "GSPD"
+#define ZSTR_UNKN              "UNKN"
