Telemetry refactoring continued

--- a/radio/src/translations/en.h.txt
+++ b/radio/src/translations/en.h.txt
@@ -975,16 +975,16 @@
 #define TR_PRECISION           "Precision"
 
 #define ZSTR_RSSI              "RSSI"
-#define ZSTR_ALT               "ALT"
-#define ZSTR_TEMP              "TEMP"
+#define ZSTR_ALT               "Alt"
+#define ZSTR_TEMP              "Temp"
 #define ZSTR_RPM               "RPM"
-#define ZSTR_FUEL              "FUEL"
-#define ZSTR_VSPD              "VSPD"
-#define ZSTR_ACCX              "ACCX"
-#define ZSTR_ACCY              "ACCY"
-#define ZSTR_ACCZ              "ACCZ"
-#define ZSTR_CURR              "CURR"
+#define ZSTR_FUEL              "Fuel"
+#define ZSTR_VSPD              "VSpd"
+#define ZSTR_ACCX              "AccX"
+#define ZSTR_ACCY              "AccY"
+#define ZSTR_ACCZ              "AccZ"
+#define ZSTR_CURR              "Curr"
 #define ZSTR_VFAS              "VFAS"
-#define ZSTR_ASPD              "ASPD"
-#define ZSTR_GSPD              "GSPD"
-#define ZSTR_UNKN              "UNKN"
+#define ZSTR_ASPD              "ASpd"
+#define ZSTR_GSPD              "GSpd"
+#define ZSTR_CELLS             "Cels"
